--- a/bugzilla/template/ko/default/index.html.tmpl
+++ b/bugzilla/template/ko/default/index.html.tmpl
@@ -29,8 +29,8 @@
 
 
 [% PROCESS global/header.html.tmpl
-   title = "$terms.Bugzilla 메인 페이지"
-   header = "메인 페이지" 
+   title = "$terms.Bugzilla 첫 화면"
+   header = "첫 화면" 
    header_addl_info = "버전 $constants.BUGZILLA_VERSION"
    style_urls = [ 'skins/standard/index.css' ]
    onload = 'document.forms[\'f\'].quicksearch.focus();'
@@ -61,42 +61,43 @@ function addSidebar() {
   <div id="new_release">
     [% IF release.data %]
       [% IF release.deprecated %]
-        <p>[% terms.Bugzilla %] [%+ release.deprecated FILTER html %]는 더 이상
-	지원되지 않습니다. 시스템 보안을 유지하기 위해 업그레이드 하십시오.</p>
+        <p>[% terms.Bugzilla %] [%+ release.deprecated FILTER html %](을)를 더 이상
+	지원하지 않습니다. 시스템 보안을 유지하기 위해 판올림 하세요.</p>
       [% END %]
 
-      <p>[% terms.Bugzilla %]의 최신 버전인 ([% release.data.latest_ver FILTER html %])은
+      <p>[% terms.Bugzilla %]의 최신 버전인 ([% release.data.latest_ver FILTER html %])(은)는
       <a href="[% release.data.url FILTER html %]">[% release.data.url FILTER html %]</a>
       에서 받을 수 있습니다.<br>
-      게시 날짜: [% release.data.date FILTER html %]</p>
+      배포 날짜: [% release.data.date FILTER html %]</p>
 
-      <p class="notice">이 메시지는 관리자 권한으로 로그인한 유저만 볼 수 있습니다.
+      <p class="notice">이 내용은 관리자 권한으로 로그인한 사용자만 볼 수 있습니다.
       이 공지는
-      <a href="editparams.cgi?section=core#upgrade_notification">매개변수</a> 페이지에서
-      설정하실 수 있습니다.</p>
+      <a href="editparams.cgi?section=core#upgrade_notification">매개변수</a> 화면에서
+      설정할 수 있습니다.</p>
     [% ELSIF release.error == "missing_package" %]
-      <p>패키지 '[% release.package FILTER html %]'가 없습니다. 이 패키지는
-      <a href="editparams.cgi?section=core#upgrade_notification">새로 릴리즈된 것을 알려주는데에</a>
-      필요합니다.</p>
+      <p>'[% release.package FILTER html %]' 꾸러미가 없습니다.
+      이 꾸러미는 <a href="editparams.cgi?section=core#upgrade_notification">
+      새로운 배포판을 알려주기 위해</a> 필요합니다.</p>
     [% ELSIF release.error == "cannot_download" %]
-      <p>해당 XML 파일 '[% release.xml_file FILTER html %]'을 생성할 수 없습니다.
-      웹에 접속할 수 있는지, 그리고 웹 서버가 현재 디렉토리에 쓸 수 있는지 확인해 보십시오.
-      프록시를 사용중이면, <a href="editparams.cgi?section=core#proxy_url">프록시 url</a>
-      의 매개변수를 정확히 설정하십시오.</p>
+      <p>'[% release.xml_file FILTER html %]' XML 파일을 생성할 수 없습니다.
+      웹에 접속할 수 있는지, 현재 디렉터리에 쓸 수 있는 권한이
+      웹서버에게 있는지 확인해보세요. 프록시를 사용중이면,
+      <a href="editparams.cgi?section=core#proxy_url">프록시 url</a>의
+      매개변수를 정확히 설정하세요.</p>
     [% ELSIF release.error == "no_update" %]
-      <p>현재 XML 파일 '[% release.xml_file FILTER html %]'을 업데이트 할 수 없습니다.
-      웹 서버가 이 파일을 고칠 수 있는지 확인해 보십시오.</p>
+      <p>'[% release.xml_file FILTER html %]' XML 파일을 갱신 할 수 없습니다.
+      웹 서버가 이 파일을 고칠 수 있는지 확인해 보세요.</p>
     [% ELSIF release.error == "no_access" %]
-      <p>현재 XML 파일 '[% release.xml_file FILTER html %]'을 읽을 수 없습니다.
-      이 파일이 올바른 접근권한을 가지고 있는지 확인해 보십시오.</p>
+      <p>'[% release.xml_file FILTER html %]' XML 파일을 읽을 수 없습니다.
+      이 파일의 접근권한이 올바른지 확인해 보세요.</p>
     [% ELSIF release.error == "corrupted" %]
-      <p>현재 XML 파일 '[% release.xml_file FILTER html %]' 잘못된 XML 포맷을 가지고 있습니다.
-      이 파일을 삭제하고 페이지를 다시 접속해 보십시오.</p>
+      <p>'[% release.xml_file FILTER html %]' XML 파일의 포맷이 잘못되었습니다.
+      이 파일을 지우고 다시 접속하세요.</p>
     [% ELSIF release.error == "unknown_parameter" %]
-      <p>'[% Param("upgrade_notification") FILTER html %]' 는 유효하지 않는 공지
-      매개변수입니다. 해당 매개변수를
-      <a href="editparams.cgi?section=core#upgrade_notification">매개변수</a> 페이지에서
-      확인해 보십시오.</p>
+      <p>'[% Param("upgrade_notification") FILTER html %]'(은)는 잘못된
+      공지 매개변수입니다. 해당 매개변수를
+      <a href="editparams.cgi?section=core#upgrade_notification">매개변수</a>
+      화면에서 확인해 보세요.</p>
     [% END %]
   </div>
 [% END %]
@@ -104,19 +105,19 @@ function addSidebar() {
 <div id="page-index">
   <div class="intro"></div>
 
-  <p>[% terms.Bugzilla %]에 오신 것을 환영합니다. [% terms.Bugzilla %]의 이번 버전에서
-    새롭게 바뀐 점들을
-    <a href="page.cgi?id=release-notes.html">release notes</a> 페이지에서 확인하십시오!
-    또한
+  <p>[% terms.Bugzilla %]에 오신 것을 환영합니다.
+    [% terms.Bugzilla %]의 새롭게 바뀐 점을 확인하려면
+    <a href="page.cgi?id=release-notes.html">release notes</a>를 보세요.
+    [%+ terms.Bugzilla %]에 대한 자세한 내용과 사용하는 방법을 알기 위해
     <a href="[% docs_urlbase FILTER html %]using.html">
-    [%- terms.Bugzilla %] 사용자 가이드</a>에서
-    [%+ terms.Bugzilla %]에 관해 사용하는 방법을 비롯한 더 많은 것을 읽을 수 있습니다.</p>
+    [%- terms.Bugzilla %] 사용자 길잡이</a>를 읽어보세요.
+    </p>
 
-  <p>가장 일반적인 작업들:</p>
+  <p>가장 자주 사용하는 기능:</p>
   <ul>
-    <li id="query"><a href="query.cgi">현재 존재하는 [% terms.bug %] 리포트 검사</a></li>
-    <li id="enter-bug"><a href="enter_bug.cgi">새로운 [% terms.bug %] 리포트 등록</a></li>
-    <li id="report"><a href="report.cgi">리포트와 차트 요약하기</a></li>
+    <li id="query"><a href="query.cgi">지금 있는 [% terms.bug %] 보고서 찾기</a></li>
+    <li id="enter-bug"><a href="enter_bug.cgi">새로운 [% terms.bug %] 보고서 작성하기</a></li>
+    <li id="report"><a href="report.cgi">보고서와 도표 요약하기</a></li>
 [% IF user.id %]
     <li id="userprefs"><a href="userprefs.cgi">열쇠글 변경 또는 사용자 환경설정</a></li>
   [% IF user.authorizer.can_logout %]
@@ -127,13 +128,13 @@ function addSidebar() {
     [% PROCESS "account/auth/login-small.html.tmpl" %]
   <ul>
   [% IF Param('createemailregexp') && user.authorizer.user_can_create_account %]
-    <li id="account"><a href="createaccount.cgi">새 [% terms.Bugzilla %] 계정 열기</a></li>
+    <li id="account"><a href="createaccount.cgi">새로운 [% terms.Bugzilla %] 사용자 등록하기</a></li>
   [% END %]
 [% END %]
-    <li id="sidebar"><a href="javascript:addSidebar()">사이드바 추가하기</a>
+    <li id="sidebar"><a href="javascript:addSidebar()">사이드바 더하기</a>
     (Mozilla Firefox와 같은 Mozilla 브라우저가 필요함)</li>
     <li id="quick_search_plugin">
-      <a href="javascript:window.external.AddSearchProvider('[% urlbase FILTER html %]search_plugin.cgi')">Quick Search 플러그인 설치하기</a> (Firefox 2 또는 Internet Explorer 7가 필요함)
+      <a href="javascript:window.external.AddSearchProvider('[% urlbase FILTER html %]search_plugin.cgi')">빠른 검색 플러그인 설치하기</a> (Firefox 2 또는 Internet Explorer 7가 필요함)
     </li>
 
 
@@ -144,13 +145,13 @@ function addSidebar() {
 
   <form id="f" name="f" action="buglist.cgi" method="get"
         onsubmit="if (this.quicksearch.value == '')
-                  { alert('먼저 하나 이상의 검색어를 입력하십시오.');
+                  { alert('하나 이상의 검색어를 입력하세요.');
                     return false; } return true;">
   <div>
     <p>Enter [% terms.abug %] # or some search terms:</p>
-    <input id="quicksearch" type="text" name="quicksearch">
-    <input id="find" type="submit" value="Find">
-    <a href="page.cgi?id=quicksearch.html">[Help]</a>
+    <input id="quicksearch" type="text" name="빠른 검색">
+    <input id="find" type="submit" value="찾기">
+    <a href="page.cgi?id=quicksearch.html">[도움말]</a>
   </div>
   </form>
 
