--- a/trunk/bugzilla/template/ko/default/global/choose-classification.html.tmpl
+++ b/trunk/bugzilla/template/ko/default/global/choose-classification.html.tmpl
@@ -21,11 +21,11 @@
   #%]
 
 [% IF target == "enter_bug.cgi" %]
-  [% title = "분류 선택" %]
-  [% subheader = "분류를 선택하세요." %]
+  [% title = "분류 고르기" %]
+  [% subheader = "분류를 고르세요." %]
 [% END %]
 
-[% DEFAULT title = "분류를 선택하세요." %]
+[% DEFAULT title = "분류를 고르세요." %]
 [% PROCESS global/header.html.tmpl %]
 
 <table>
