--- a/www/kpw2008/css/style.css
+++ b/www/kpw2008/css/style.css
@@ -208,6 +208,14 @@ div.content_block tr.last td {
 */
 
 /* Footer Text */
+div.footer_logo {
+	background: transparent url(../images/kpw_footer.png) no-repeat scroll center top !important;
+	margin-top: 20px;
+	color: #999;
+	font-size: 0.9em;
+	overflow: hidden;
+	height: 105px;
+}
 div.footer_block {
 	margin-top: 20px;
 	color: #999;
@@ -230,10 +238,18 @@ div.footer_block h3 {
 div.footer_block h4 {
 	font-size: 1.0em;
 }
+div.footer_block span {
+	font-size: 1.1em;
+	color: #ddd;
+}
 
 /* Widths */
 .widthsponsors {
 	width: 20%;
+}
+.width_footerlogo {
+	overflow: hidden;
+	width: 140px;
 }
 .width33 {
 	width: 33%;
