--- a/trunk/www/kpw2008/css/style.css
+++ b/trunk/www/kpw2008/css/style.css
@@ -243,14 +243,11 @@ div.footer_block span {
         color: #ddd;
 }
 div.footer_block a {
-  color: white;
+  color: #999;
   text-decoration: none;
 }
 div.footer_block a:hover {
   text-decoration: underline;
-}
-div.footer_block a.selected {
-  font-weight:bold;
   color: yellow;
 }
 
