--- a/trunk/www-framework/kpw/template/tt/default/default.html
+++ b/trunk/www-framework/kpw/template/tt/default/default.html
@@ -1,12 +1,119 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-    <head>
-        <meta http-equiv="Content-Language" content="en" />
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>Kpw - Default on Soozy</title>
-    </head>
-    <body>
-        <h1>Hello! Kpw - Default default</h1>
-    </body>
-</html>
+[% INCLUDE "_include/www_head.html" %]
+
+        <div class="box box_middle center clear_both">
+          <div class="width66 float_left">
+            <div class="content_block">
+              <h1>Korean Perl Workshop 2008: Rising Perl</h1>
+              <div class="meta">2008년 08월 08일 by keedi</div>
+              <ul>
+                <li>
+                  <b>시간:</b>
+                  <p> 2008년 8월 23일 토요일, 13:00 ~ 21:00 </p>
+                </li>
+                <li>
+                  <b>장소:</b>
+                  <p> 서울 강남역 6번 출구 토즈 강남점 (<a href="location.html">위치 참조</a>) </p>
+                </li>
+                <li>
+                  <b>행사 대표:</b>
+                  <p> keedi (김도형) </p>
+                </li>
+                <li>
+                  <b>행사 목표:</b>
+                  <p>
+                    한국의 펄 사용자들이 모일 수 있는 장을 마련하여,
+                    한국 내 펄 커뮤니티를 확대하고 기존 사용자들에게
+                    펄에 대한 새로운 관심과 가능성을 전달하기 위해
+                    이번 행사를 개최합니다.
+                  </p>
+                </li>
+                <li>
+                  <b>행사 설명:</b>
+                  <p>
+                    펄은 파이썬, 루비와 함께 가장 인기있는 3대 스크립트 언어 중 하나입니다.
+                    20여년의 역사를 가진 펄은 국내에서는 오래된 언어쯤으로 취급받고 있지만,
+                    오히려 국제적으로 여전히 많이 사용하고 있으며,
+                    해외의 펄 커뮤니티는 갈수록 그 열기 또한 뜨거워지고 있습니다.
+                    최근 일본에서 열린 펄 컨퍼런스인
+                    <a href="http://yapcasia.org">YAPC::Asia 2008</a>을 보더라도
+                    단일 언어를 주제로 500명에 달하는 국내외 참석자가 모인 것을 보면
+                    펄이란 녀석이 무슨 매력을 가지고 있긴 한가 봅니다.
+                  </p>
+
+                 <p>
+                    국내에서는 비단 개발과 서버관리 보안 등의 IT분야 뿐 아니라
+                    생명정보학이나, 언어학, 대용량 자료처리 등 다양한 분야에서도
+                    펄을 사용하고 있습니다. 하지만 이렇게 펄을 사용하는 분들이 모여서
+                    의사소통할 수 있는 기회는 거의 없었습니다.
+                    아무쪼록 이번 워크샵을 통해 한국에서 펄에 관심을 가지신 분들과 함께
+                    최신 펄의 동향과 기술적인 주제들을 공유할 수 있는 장이 될 수 있길,
+                    국내의 펄 커뮤니티가 질적으로나 양적으로나 한 단계 성장할 수 있길
+                    기대해봅니다.
+                  </p>
+
+                  <p>
+                    많은 관심과 참석 부탁드리겠습니다. 고맙습니다! :-)
+                  </p>
+                </li>
+                <li>
+                  <b>행사 내용:</b>
+                  <p> 정규 발표(각 20분) 13개, 짧은 발표(각 5분) 8개 (<a href="schedule.html">일정 참조</a>) </p>
+                </li>
+                <li>
+                  <b>등록비:</b>
+                  <ul>
+                    <li> <b>사전등록</b>: 학생  5,000원 일반 10,000원 </li>
+                    <li> <b>현장등록</b>: 학생 10,000원 일반 20,000원 </li>
+                  </ul>
+                  <p>
+                    8월 11일 월요일부터 <a href="register.html">이곳</a>에서 등록할 수 있습니다.
+                  </p>
+                </li>
+             <li>
+                  <b>행사 STAFF:</b>
+                  <ul>
+                    <li> saillinux </li>
+                    <li> verve </li>
+                    <li> aero </li>
+                    <li> amorette </li>
+                    <li> pung96 </li>
+                    <li> 고기스님 </li>
+                  </ul>
+                </li>
+                <li>
+                  <b>후원:</b>
+                  <ul>
+                    <li> NHN Corp. </li>
+                    <li> Free OpenSource Software Association </li>
+                    <li> 싸이텍 미디어, 지&amp;선 </li>
+                    <li> 한빛 미디어 </li>
+                    <li> KLDP </li>
+                    <li> 펄매니아 </li>
+                    <li> 한국 펄 사용자 모임 </li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+            <div class="content_block">
+              <h2>KPW2008 공식 홈페이지를 개시했습니다.</h2>
+              <div class="meta">2008년 08월 08일 by keedi</div>
+              <p>
+                안녕하세요! :-)
+              </p>
+              <ul>
+                <li> 김희원(saillinux)님의 사이트 전반에 걸친 작업 </li>
+                <li> JP Kim님의 initial mock-up site design </li>
+                <li> 김기석님께서 제공해주신 event.perl.kr 도메인 </li>
+                <li> 장범수(pung96)님께서 제공해주신 서버 </li>
+                <li> 보이지 않는 곳에서 고생해주시는 STAFF 분들 </li>
+              </ul>
+              <p>
+                덕분에 이번 행사에서 사용할 워크샵 공식 홈페이지를
+                준비할 수 있었습니다.  다시 한 번 감사드리며,
+                행사와 관련한 새소식은 이곳을 통해 알려드리겠습니다. :-)
+              </p>
+            </div>
+          </div>
+
+[% INCLUDE "_include/sponsors.html" %]
+[% INCLUDE "_include/www_foot.html" %]
