--- a/www-framework/kpw/html/css/style.css
+++ b/www-framework/kpw/html/css/style.css
@@ -41,7 +41,7 @@ a {
     background: white;
 }
 .sponsors h2 {
-    background:transparent url(images/sponsors_bg.png) no-repeat scroll left top;
+    background:transparent url(/images/sponsors_bg.png) no-repeat scroll left top;
     font-size:1.0em;
     font-weight:normal;
     color:#777;
@@ -125,7 +125,7 @@ a {
 /* Content */
 #content {
         padding: 120px 0 0px;
-        background: #777 url(../images/kpw_horizontal.png) no-repeat scroll center 20px !important;
+        background: #777 url(/images/kpw_horizontal.png) no-repeat scroll center 20px !important;
         
 }
 
@@ -146,14 +146,14 @@ div.box {
 }
 div.box_top {
         height: 30px;
-        background: transparent url(../images/box_top.gif) no-repeat scroll center bottom !important;
+        background: transparent url(/images/box_top.gif) no-repeat scroll center bottom !important;
 }
 div.box_middle {
-        background: transparent url(../images/box_middle.gif) repeat-y scroll center top !important;
+        background: transparent url(/images/box_middle.gif) repeat-y scroll center top !important;
 }
 div.box_bottom {
         height: 150px;
-        background: transparent url(../images/box_bottom.gif) no-repeat scroll center top !important;
+        background: transparent url(/images/box_bottom.gif) no-repeat scroll center top !important;
 }
 
 /* Content Text */
@@ -209,7 +209,7 @@ div.content_block tr.last td {
 
 /* Footer Text */
 div.footer_logo {
-        background: transparent url(../images/kpw_footer.png) no-repeat scroll center top !important;
+        background: transparent url(/images/kpw_footer.png) no-repeat scroll center top !important;
         margin-top: 20px;
         color: #999;
         font-size: 0.9em;
